--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="icon" href="/favicon.ico" sizes="32x32" />
   <link rel="apple-touch-icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="A collection of ceramics and pottery by Viola Ou. Browse unique bowls, vases, and functional art pieces." />
+  <meta name="theme-color" content="#F7E547" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#262626" media="(prefers-color-scheme: dark)" />
   <title>Viola Ou</title>
 </head>
 
